(include_subdirs unqualified)

(library (name front)
         (wrapped false)
         (modules (:standard \ main test)))

(executable (name main) 
            (modules main)
            (libraries front))

(library (name test) 
         (modules test) 
         (libraries front)
         (inline_tests (flags -verbose))
         (preprocess (pps ppx_inline_test)))
